Now displays current month at top of table

--- a/calendar.html
+++ b/calendar.html
@@ -20,7 +20,7 @@
             <table class="september">
                 <thead>
                     <tr>
-                        <th class="makegreen" colspan="7">< September 2015 ></th>
+                        <th id="monthHere" class="makegreen" colspan="7">< September 2015 ></th>
                     </tr>
                     <tr>
                         <th>S</th>
