added functionality to list

--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <scirpt src="./main.js" type="text/javascript" defer>
+    <script src="./main.js" type="text/javascript" defer>
 
-    </scirpt>
+    </script>
     <title>To Do List</title>
 </head>
 <body>
 
     <div class="container">
-        
+
         <div class="userSpace">
             <label for="userInput">Add to your to-do list: </label>
             <input type="text" id="userInput" name="addTask">
-            <button>ADD TASK</button>
+            <button onclick="addToList()">ADD TASK</button>
         </div>
 
         <div class="taskSpace">
