--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./calendar.css" type="text/css">
     <script src="./main.js" type="text/javascript" defer>
 
     </script>
