--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <div class="container">
+    <div class="container" id="indexContainer">
 
         <div class="userSpace">
             <label for="userInput">Add to your to-do list: </label>
@@ -21,6 +21,9 @@
         <div class="taskSpace">
             <ul id="taskList">
                 <li>You have not added any tasks yet</li>
+            </ul>
+            <ul class="delStyle" id="delTasks">
+
             </ul>
         </div>
 
