--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./calendar.css" type="text/css">
-    <script src="./main.js" type="text/javascript" defer>
+    <!--<script src="./main.js" type="text/javascript" defer>-->
+
+    <!--</script>-->
+    <script src="./mainTwo.js" type="text/javascript" defer>
 
     </script>
     <title>To Do List</title>
@@ -19,9 +22,9 @@
         </div>
 
         <div class="taskSpace">
-            <ul id="taskList">
+            <ol id="taskList">
                 <li>You have not added any tasks yet</li>
-            </ul>
+            </ol>
             <ul class="delStyle" id="delTasks">
 
             </ul>
