added to do list elements to the calendar.html

--- a/calendar.html
+++ b/calendar.html
@@ -13,8 +13,73 @@
 
     <div class="container">
         <div class="bigDate">
-            <h2 id="largeDayName">Wednesday</h2>
-            <p id="largeDay">23</p>
+            <div class="BDTop">
+                <h1 id="largeDayName">Wednesday</h1>
+                <h1 id="largeDay">23</h1>
+            </div>
+            <div class="listSpace">
+                <div id="userSpace">
+                    <label for="taskName">Task Name: </label>
+                    <input id="taskName" type="text">
+                    <label for="taskDescription">Description: </label>
+                    <textarea id="taskDescription" rows="10" cols="30" name="aboutSelf">
+
+                    </textarea>
+                    <label for="taskTime">Remind me at: </label>
+                    <input type="time" id="taskTime">
+                    <button>SUBMIT TASK</button>
+                </div>
+                <div id="listHere">
+                    <ol>
+                        <li>
+                            <div class="nameAndDone">
+                                <input type="checkbox"><h3>Lorem Ipsum</h3>
+                            </div>
+                            <div>
+                                <button>DELETE TASK</button>
+                                <button>EDIT TASK</button>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="nameAndDone">
+                                <input type="checkbox"><h3>Lorem Ipsum</h3>
+                            </div>
+                            <div>
+                                <button>DELETE TASK</button>
+                                <button>EDIT TASK</button>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="nameAndDone">
+                                <input type="checkbox"><h3>Lorem Ipsum</h3>
+                            </div>
+                            <div>
+                                <button>DELETE TASK</button>
+                                <button>EDIT TASK</button>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="nameAndDone">
+                                <input type="checkbox"><h3>Lorem Ipsum</h3>
+                            </div>
+                            <div>
+                                <button>DELETE TASK</button>
+                                <button>EDIT TASK</button>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="nameAndDone">
+                                <input type="checkbox"><h3>Lorem Ipsum</h3>
+                            </div>
+                            <div>
+                                <button>DELETE TASK</button>
+                                <button>EDIT TASK</button>
+                            </div>
+                        </li>
+                    </ol>
+                </div>
+            </div>
+
         </div>
         <div class="calender">
             <table class="september">
