added second js file for to do list part of calendar

--- a/calendar.html
+++ b/calendar.html
@@ -27,7 +27,7 @@
                     </textarea>
                     <label for="taskTime">Remind me at: </label>
                     <input type="time" id="taskTime">
-                    <button>SUBMIT TASK</button>
+                    <button onclick="tester()">SUBMIT TASK</button>
                 </div>
                 <div id="listHere">
                     <ol>
