can now check off tasks

--- a/calendar.html
+++ b/calendar.html
@@ -39,39 +39,7 @@
                     </div>
                     <ol id="allTasks">
                         <li>
-                            <div class="nameAndDone">
-                                <i class="far fa-square"></i><h3>Lorem Ipsum</h3>
-                                <i class="fas fa-trash-alt"></i>
-                                <i class="far fa-edit"></i>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="nameAndDone">
-                                <i class="far fa-square"></i><h3>Lorem Ipsum</h3>
-                                <i class="fas fa-trash-alt"></i>
-                                <i class="far fa-edit"></i>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="nameAndDone">
-                                <i class="far fa-square"></i><h3>Lorem Ipsum</h3>
-                                <i class="fas fa-trash-alt"></i>
-                                <i class="far fa-edit"></i>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="nameAndDone">
-                                <i class="far fa-square"></i><h3>Lorem Ipsum</h3>
-                                <i class="fas fa-trash-alt"></i>
-                                <i class="far fa-edit"></i>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="nameAndDone">
-                                <i class="far fa-square"></i><h3>Lorem Ipsum</h3>
-                                <i class="fas fa-trash-alt"></i>
-                                <i class="far fa-edit"></i>
-                            </div>
+                            You have no tasks set for this date.
                         </li>
                     </ol>
                 </div>
