started 3rd draft to better use OOP

--- a/calendar.html
+++ b/calendar.html
@@ -9,7 +9,10 @@
     <script src="./script.js" type="text/javascript" defer>
 
     </script>
-    <script src="./cmain.js" type="text/javascript" defer>
+    <!--<script src="./cmain.js" type="text/javascript" defer>-->
+
+    <!--</script>-->
+    <script src="./cMain2.js" type="text/javascript" defer>
 
     </script>
 </head>
