tasks now completeable on caldendar

--- a/calendar.html
+++ b/calendar.html
@@ -6,15 +6,16 @@
     <link rel="stylesheet" href="calendar.css" type="text/css">
     <title>Calender</title>
 
-    <script src="./script.js" type="text/javascript" defer>
 
-    </script>
     <!--<script src="./cmain.js" type="text/javascript" defer>-->
 
     <!--</script>-->
     <script src="./cMain2.js" type="text/javascript" defer>
 
     </script>
+    <!--<script src="./script.js" type="text/javascript" defer>-->
+
+    <!--</script>-->
 </head>
 <body>
 
