--- a/calendar.html
+++ b/calendar.html
@@ -35,7 +35,7 @@
                     </textarea>
                     <label for="taskTime">Remind me at: </label>
                     <input type="time" id="taskTime">
-                    <button onclick="addTask()">SUBMIT TASK</button>
+                    <button id="taskButton" onclick="addTask()">SUBMIT TASK</button>
                 </div>
                 <div id="listHere">
                     <div id="allLists">
